NINE-595 corrected tournaments

--- a/locales/de.json
+++ b/locales/de.json
@@ -434,7 +434,7 @@
     "dropsWinsSlots": {
       "title": "Drops<span class=\"Colored\"> & </span>Wins<br/> Slots",
       "name": "Drops & Wins Slots",
-      "text": "Willkommen zu Phase 6 der täglichen Drops & Wins Werbeaktion. Pragmatic Play verdoppelt die monatliche Slots-Ausgabe des Budgets von Drops And Wins auf 500.000 €! Außerdem wird die Anzahl der monatlichen Geldpreise erhöht und es gibt mehr Gelegenheiten auf Gewinne. Mach mit beim aufregenden Drops & Wins und erhalte die Chance, einen Anteil an dem massiven 4.000.000 € Preisgeld zu gewinnen! Mit einem Multiplikator zu spielen, macht noch mehr Spaß. Darum gibt es diesmal in den Wochen 21–24 Wochenturniere (Gewinnmultiplikatorwochen) sowie Tagesausspielungen (Gewinnmultiplikatorwochen) mit einigen neuen Spielen!"
+      "text": "Willkommen zu Phase 7 der täglichen Drops & Wins Werbeaktion. Pragmatic Play verdoppelt die monatliche Slots-Ausgabe des Budgets von Drops & Wins auf 500.000 €! Außerdem wird die Anzahl der monatlichen Geldpreise erhöht und es gibt mehr Gelegenheiten auf Gewinne. Mach mit beim aufregenden Drops & Wins und erhalte die Chance, einen Anteil an dem massiven 4.000.000 € Preisgeld zu gewinnen! Deshalb gibt es diesmal in den Wochen 25–28 der Wöchentlichen Turniere und Täglichen Gewinnausspielungen mit einigen neuen Spielen!"
     },
     "dropsWinsLive": {
       "title": "Drops<span class=\"Colored\"> & </span>Wins<br/> Live",
@@ -459,15 +459,15 @@
   "dropsWinsSlots": {
     "title": "Aufgewertete Ausgabe von Drops & Wins Slots",
     "prize": "4.000.000 €",
-    "text": "Willkommen zu Phase 6 der täglichen Drops & Wins Werbeaktion. Pragmatic Play verdoppelt die monatliche Slots-Ausgabe des Budgets von Drops And Wins auf 500.000 €! Außerdem wird die Anzahl der monatlichen Geldpreise erhöht und es gibt mehr Gelegenheiten auf Gewinne. Mach mit beim aufregenden Drops & Wins und erhalte die Chance, einen Anteil an dem massiven 4.000.000 € Preisgeld zu gewinnen! Mit einem Multiplikator zu spielen, macht noch mehr Spaß. Darum gibt es diesmal in den Wochen 21–24 Wochenturniere (Gewinnmultiplikatorwochen) sowie Tagesausspielungen (Gewinnmultiplikatorwochen) mit einigen neuen Spielen!",
-    "textMobile": "Willkommen zu Phase 6 der täglichen Drops & Wins Werbeaktion. Pragmatic Play verdoppelt die monatliche Slots-Ausgabe des Budgets von Drops And Wins auf 500.000 €!",
+    "text": "Willkommen zu Phase 7 der täglichen Drops & Wins Werbeaktion. Pragmatic Play verdoppelt die monatliche Slots-Ausgabe des Budgets von Drops & Wins auf 500.000 €! Außerdem wird die Anzahl der monatlichen Geldpreise erhöht und es gibt mehr Gelegenheiten auf Gewinne. Mach mit beim aufregenden Drops & Wins und erhalte die Chance, einen Anteil an dem massiven 4.000.000 € Preisgeld zu gewinnen! Deshalb gibt es diesmal in den Wochen 25–28 der Wöchentlichen Turniere und Täglichen Gewinnausspielungen mit einigen neuen Spielen!",
+    "textMobile": "Willkommen zu Phase 7 der täglichen Drops & Wins Werbeaktion. Pragmatic Play verdoppelt die monatliche Slots-Ausgabe des Budgets von Drops & Wins auf 500.000 €!",
     "terms": [
       {
-        "title": "Laufzeit der Phase 6",
-        "text": "● Woche 21: 30th Juni 2021 09:01 CEST – 7th Juli 2021 18:59 CEST<br/>● Woche 22: 7th Juli 2021 19:01 CEST – 14th Juli 2021 18:59 CEST<br/>● Woche 23: 14th Juli 2021 19:01 CEST – 21st Juli 2021 18:59 CEST<br/>● Woche 24: 21st Juli 2021 19:01 CEST – 28th Juli 2021 18:59 CEST"
+        "title": "Laufzeit der Phase 7",
+        "text": "● Woche 25: 28th Juli 2021 09:01 CEST – 4th August 2021 18:59 CEST<br/>● Woche 26: 4th August 2021 19:01 CEST – 11th August 2021 18:59 CEST<br/>● Woche 27: 11th August 2021 19:01 CEST – 18st August 2021 18:59 CEST<br/>● Woche 28: 18st August 2021 19:01 CEST – 25th August 2021 18:59 CEST"
       },
       {
-        "title": "Teilnehmende Spiele der Wochen 17 – 20",
+        "title": "Teilnehmende Spiele",
         "text": "Wolf Gold™, Mustang Gold™, Sweet Bonanza™, John Hunter and the Tomb of the Scarab Queen™, Great Rhino Megaways™, John Hunter and the Book of Tut™, The Dog House™, The Dog House Megaways™, Chilli Heat™, Fruit Party™, Big Bass Bonanza™, Madame Destiny Megaways™, Gems Bonanza™, Wild Wild Riches™, Wild West Gold™, Gates of Olympus™, Power of Thor Megaways™, Buffalo King Megaways™, The Hand of Midas™, Floating Dragon Hold & Spin™, The Magic Cauldron – Enchanted Brew™, Heart of Rio™, Dragon Hot Hold and Spin™, Lucky Lightning™, 5 Lions Megaways™."
       },
       {
@@ -485,14 +485,14 @@
     ]
   },
   "dropsWinsLive": {
-    "title": "Drops and Wins for Live Casino",
+    "title": "Drops & Wins for Live Casino",
     "prize": "3.000.000 €",
     "text": "Pragmatic Play bietet mehr und mehr Unterhaltung der nächsten Stufe mit seinem neuen Drops and Wins for Live Casino. Ergreife die Chance, einen Anteil am unglaublichen 3.000.000 € Preisgeld zu gewinnen!<br/><br/>Magst du Live-Spiele? Diese Live-Ausgabe wird dir gefallen. Mach mit bei wöchentlichen Turnieren – Roulette, Blackjack, Mega Wheel, Baccarat!",
     "textMobile": "Pragmatic Play bietet mehr und mehr Unterhaltung der nächsten Stufe mit seinem neuen Drops and Wins for Live Casino. Ergreife die Chance, einen Anteil am unglaublichen 3.000.000 € Preisgeld zu gewinnen!",
     "terms": [
       {
-        "title": "Laufzeit der Phase 1",
-        "text": "● Woche 1: 3 Juni 2021 09:01 CEST – 9 Juni 2021 18:59 CEST<br/>● Woche 2: 9 Juni 2021 19:01 CEST – 16 Juni 2021 18:59 CEST<br/>● Woche 3: 16 Juni 2021 19:01 CEST – 23 Juni 2021 18:59 CEST<br/>● Woche 4: 23 Juni 2021 19:01 CEST – 30 Juni 2021 18:59 CEST"
+        "title": "Laufzeit der Phase 3",
+        "text": "● Woche 9: 28th Juli 2021 09:01 CEST – 4th August 2021 18:59 CEST<br/>● Woche 10: 4th August 2021 19:01 CEST – 11th August 2021 18:59 CEST<br/>● Woche 11: 11th August 2021 19:01 CEST – 18st August 2021 18:59 CEST<br/>● Woche 12: 18st August 2021 19:01 CEST – 25th August 2021 18:59 CEST"
       },
       {
         "title": "Teilnehmende Spiele",
