--- a/locales/fr_ca.json
+++ b/locales/fr_ca.json
@@ -433,7 +433,7 @@
     "dropsWinsSlots": {
       "title": "Drops<span class=\"Colored\"> & </span>Wins",
       "name": "Drops & Wins Slots",
-      "text": "Bienvenue à la nouvelle étape 6 de la promotion Drops & Wins quotidienne. Pragmatic Play a décidé de doubler le budget de l’édition mensuelle de Drops & Wins Slots à 500 000 €! Ils augmentent également le nombre de prix mensuels en argent et vous donnent encore plus de chances de gagner. Participez au passionnant Drops & Wins et courez la chance de gagner une part des 4 000 000 € de prix! Jouer avec un multiplicateur est plus amusant. Voilà pourquoi, cette fois-ci, il y a les semaines 21–24 des tournois hebdomadaires (semaines à prix multiplicateur) et des remises de prix quotidiennes (semaines à prix multiplicateur) avec de nouveaux jeux!"
+      "text": "Bienvenue à la nouvelle étape 7 de la promotion Drops & Wins quotidienne. Pragmatic Play a décidé de doubler le budget de l’édition mensuelle de Drops & Wins Slots à 500 000 €! Ils augmentent également le nombre de prix mensuels en argent et vous donnent encore plus de chances de gagner. Participez au passionnant Drops & Wins et courez la chance de gagner une part des 4 000 000 € de prix! C’est pourquoi, cette fois, les semaines 25–28 sont consacrées à des tournois hebdomadaires et à des remises de prix quotidiens avec de nouveaux jeux!"
     },
     "dropsWinsLive": {
       "title": "Drops<span class=\"Colored\"> & </span>Wins<br/> Live",
@@ -458,12 +458,12 @@
   "dropsWinsSlots": {
     "title": "Édition mise à jour de Drops & Wins Slots",
     "prize": "4 000 000 €",
-    "text": "Bienvenue à la nouvelle étape 6 de la promotion Drops & Wins quotidienne. Pragmatic Play a décidé de doubler le budget de l’édition mensuelle de Drops & Wins Slots à 500 000 €! Ils augmentent également le nombre de prix mensuels en argent et vous donnent encore plus de chances de gagner. Participez au passionnant Drops & Wins et courez la chance de gagner une part des 4 000 000 € de prix! Jouer avec un multiplicateur est plus amusant. Voilà pourquoi, cette fois-ci, il y a les semaines 21–24 des tournois hebdomadaires (semaines à prix multiplicateur) et des remises de prix quotidiennes (semaines à prix multiplicateur) avec de nouveaux jeux!",
-    "textMobile": "Bienvenue à la nouvelle étape 6 de la promotion Drops & Wins quotidienne. Pragmatic Play a décidé de doubler le budget de l’édition mensuelle de Drops & Wins Slots à 500 000 €!",
+    "text": "Bienvenue à la nouvelle étape 7 de la promotion Drops & Wins quotidienne. Pragmatic Play a décidé de doubler le budget de l’édition mensuelle de Drops & Wins Slots à 500 000 €! Ils augmentent également le nombre de prix mensuels en argent et vous donnent encore plus de chances de gagner. Participez au passionnant Drops & Wins et courez la chance de gagner une part des 4 000 000 € de prix! C’est pourquoi, cette fois, les semaines 25–28 sont consacrées à des tournois hebdomadaires et à des remises de prix quotidiens avec de nouveaux jeux!",
+    "textMobile": "Bienvenue à la nouvelle étape 7 de la promotion Drops & Wins quotidienne. Pragmatic Play a décidé de doubler le budget de l’édition mensuelle de Drops & Wins Slots à 500 000 €!",
     "terms": [
       {
-        "title": "L’étape 6 se déroule ainsi",
-        "text": "● Semaine 21: 30th juin 2021 09:01 CEST – 7th juli 2021 18:59 CEST<br/>● Semaine 22: 7th June 2021 19:01 CEST – 14th juli 2021 18:59 CEST<br/>● Semaine 23: 14th June 2021 19:01 CEST – 21st juli 2021 18:59 CEST<br/>● Semaine 24: 21st June 2021 19:01 CEST – 28th juli 2021 18:59 CEST"
+        "title": "L’étape 7 se déroule ainsi",
+        "text": "● Semaine 25: 28 juli 2021 09:01 CEST – 4 août 2021 18:59 CEST<br/>● Semaine 26: 4 août 2021 19:01 CEST – 11 août 2021 18:59 CEST<br/>● Semaine 27: 11 août 2021 19:01 CEST – 18 août 2021 18:59 CEST<br/>● Semaine 28: 18 août 2021 19:01 CEST – 25 août 2021 18:59 CEST"
       },
       {
         "title": "Jeux participants:",
@@ -484,14 +484,14 @@
     ]
   },
   "dropsWinsLive": {
-    "title": "Drops and Wins for Live Casino",
+    "title": "Drops & Wins for Live Casino",
     "prize": "3 000 000 €",
     "text": "Pragmatic Play vous donne de plus en plus de chances de vous divertir en passant au niveau supérieur grâce à son nouveau Drops and Wins for Live Casino. Saisissez la chance de gagner une part de l’impressionnant montant de 3 000 000 € de prix en argent!<br/><br/>Aimez-vous les jeux en direct? Cette édition en direct vous ira à coup sûr. Participez aux tournois hebdomadaires  - Roulette, Blackjack, Grande Roue, Baccarat!",
     "textMobile": "Pragmatic Play vous donne de plus en plus de chances de vous divertir en passant au niveau supérieur grâce à son nouveau Drops and Wins for Live Casino. Saisissez la chance de gagner une part de l’impressionnant montant de 3 000 000 € de prix en argent!",
     "terms": [
       {
-        "title": "L’étape 1 se déroule ainsi<br/><br/>",
-        "text": "● Semaine 1: 3 juin 2021 09:01 CEST – 9 juin 2021 18:59 CEST<br/>● Semaine 2: 9 juin 2021 19:01 CEST – 16 juin 2021 18:59 CEST<br/>● Semaine 3: 16 juin 2021 19:01 CEST – 23 juin 2021 18:59 CEST<br/>● Semaine 4: 23 juin 2021 19:01 CEST – 30 juin 2021 18:59 CEST"
+        "title": "L’étape 3 se déroule ainsi<br/><br/>",
+        "text": "● Semaine 9: 28 juli 2021 09:01 CEST – 4 août 2021 18:59 CEST<br/>● Semaine 10: 4 août 2021 19:01 CEST – 11 août 2021 18:59 CEST<br/>● Semaine 11: 11 août 2021 19:01 CEST – 18 août 2021 18:59 CEST<br/>● Semaine 12: 18 août 2021 19:01 CEST – 25 août 2021 18:59 CEST"
       },
       {
         "title": "Jeux/Tables participants<br/><br/>",
