NINE-593 corrected texts

--- a/locales/de.json
+++ b/locales/de.json
@@ -1215,7 +1215,9 @@
       "title2": "begrüssungsspaket",
       "text2": [
         "Um die Boni für die erste/zweite/dritte Einzahlung zu erhalten, muss Ihr Kontostand mindestens 20 EUR, 20 CAD/AUD, 500 CZK, 350 ZAR, 40 BGN, 150 DKK, 150 HRK, 100 RON, 0,00075 BTC betragen.",
-        "Der höchste Bonusbetrag für erste/zweite/dritte Einzahlung ist 100 EUR, 150 CAD, 160 AUD, 2600 CZK, 1730 ZAR, 200 BGN, 740 DKK, 750 HRK, 490 RON, 0,0037 BTC.",
+        "Der höchste Bonusbetrag für erste/zweite/dritte Einzahlung ist 150 EUR, 225 CAD, 225 AUD, 3330 CZK, 2600 ZAR, 290 BGN, 1150 DKK, 1130 HRK, 740 RON, 0,0055 BTC.",
+        "Spieler können ihre 250 Freispiele in den Spielautomaten Aztec Magic, Aztec Magic Delux, Johnny Cash, Platinum Lightning, und Platinum Lightning Delux von BGaming nutzen.",
+        "Nach der  ersten Einzahlung erhalten Spieler die nächsten 5 Tage lang jeden Tag 50 Freispiele.",
         "Freispiele müssen innerhalb von 3 Tagen aktiviert werden, die Laufzeit der Freispiele und der aus diesen erzielten Gewinne beträgt 7 Tage.",
         "Zur Erfüllung der Umsatzanforderungen für einen Gewinn aus Boni/Freispielen müssen Einsätze in Höhe des 40-fachen des Bonus-/Freispielgewinns getätigt werden.",
         "Der größtmögliche Gewinn aus Freispielen für die erste/zweite/dritte Einzahlung ist 50 EUR, 70 CAD, 80 AUD, 1300 CZK, 860 ZAR, 100 BGN, 370 DKK, 375 HRK, 245 RON, 0,0019 BTC.",
