--- a/locales/en_ca.json
+++ b/locales/en_ca.json
@@ -1216,7 +1216,9 @@
       "title2": "welcome package",
       "text2": [
         "To get the first/second/third deposit bonuses, your deposit shall be at least 20 EUR, 20 CAD/AUD, 500 CZK, 350 ZAR, 40 BGN, 150 DKK, 150 HRK, 100 RON, 0,00075 BTC.",
-        "Maximum first/second/third deposit bonus amount is 100 EUR, 150 CAD, 160 AUD, 2600 CZK, 1730 ZAR, 200 BGN, 740 DKK, 750 HRK, 490 RON, 0,0037 BTC.",
+        "Maximum first/second/third deposit bonus amount is 150 EUR, 225 CAD, 225 AUD, 3330 CZK, 2600 ZAR, 290 BGN, 1150 DKK, 1130 HRK, 740 RON, 0,0055 BTC.",
+        "Players can use their Free Spins in Aztec Magic, Aztec Magic Delux, Johnny Cash, Platinum Lightning, and Platinum Lightning Delux slot games by BGaming.",
+        "After the first deposit, players will get 50 Free Spins every day for the next 5 days.",
         "Free spin activation duration is 3 days, free spin duration and free spin result duration are 7 days.",
         "To wager the bonus / free spin result, you need to make bets for an amount 40 times the bonus / free spin result amount.",
         "Maximum win resulting from first/second/third deposit free spins is 50 EUR, 70 CAD, 80 AUD, 1300 CZK, 860 ZAR, 100 BGN, 370 DKK, 375 HRK, 245 RON, 0,0019 BTC.",
