NINE-603 corrected texts

--- a/locales/cs.json
+++ b/locales/cs.json
@@ -462,7 +462,7 @@
       },
       {
         "title": "Hry zahrnuté",
-        "text": "Wolf Gold™, Mustang Gold™, Sweet Bonanza™, John Hunter and the Tomb of the Scarab Queen™, Great Rhino Megaways™, John Hunter and the Book of Tut™, The Dog House™, The Dog House Megaways™, Chilli Heat™, Fruit Party™, Big Bass Bonanza™, Madame Destiny Megaways™, Gems Bonanza™, Wild Wild Riches™, Wild West Gold™, Gates of Olympus™, Power of Thor Megaways™, Buffalo King Megaways™, The Hand of Midas™, Floating Dragon Hold & Spin™, The Magic Cauldron – Enchanted Brew™, Heart of Rio™, Dragon Hot Hold and Spin™, Lucky Lightning™, 5 Lions Megaways™."
+        "text": "Wolf Gold™, Mustang Gold™, Sweet Bonanza™, John Hunter and the Tomb of the Scarab Queen™, Great Rhino Megaways™, John Hunter and the Book of Tut™, The Dog House™, The Dog House Megaways™, Chilli Heat™, Fruit Party™, Big Bass Bonanza™, Madame Destiny Megaways™, Gems Bonanza™, Wild Wild Riches™, Wild West Gold™, Gates of Olympus™, Power of Thor Megaways™, Floating Dragon Hold&Spin™, The Hand of Midas™, 5 Lions Megaways™, Buffalo King Megaways™, Release the Kraken™, Empty the Bank™, Lucky Grace And Charm™, Book of Vikings™."
       },
       {
         "title": "Drops & Wins zahrnuje",
@@ -470,11 +470,7 @@
       },
       {
         "title": "Jak vyhrát",
-        "text": "● Nejvyšší částka výhry za jeden spin pravená pro výši sázky.<br/>● Každý spin za skutečné peníze v zapojených hrách může přinést náhodnou cenu v hotovosti.<br/>● Hráči musí hrát se skutečnými penězi v kterékoliv ze zapojených her BEZ požadavku na minimální sázku. Hráči nevznikají žádné další náklady spojené s účastí."
-      },
-      {
-        "title": "Dodatečně",
-        "text": "● Hráči, kteří se turnaje zúčastní ve více týdnech, mohou vyhrát ceny v podobě násobku r z vsazené částky vítězného hráče, jak je stanoveno v Tabulce výher týdenního turnaje (týdny pro násobení výhry) – a v Tabulce výher denního turnaje Prize Drop (týdny pro násobení výhry) (dále jako „Týdny pro násobení výhry“.<br/>● Přesáhne-li vítězný spin hodnotu deseti eur (10 €), výhra bude vyplacena na základě sázky ve výši deseti eur (10 €) nebo odpovídající částky v dostupné měně (viz definice níže) X získaný násobek.<br/>● Pořadí ve výsledkové tabulce odpovídá skóre, které je dané nejvyšší vyhranou částkou v jednom spinu a libovolné zahrnuté hře, upravenou podle výše vkladu.<br/>● Pokud by týdenní turnaj dokončili dva (2) nebo více hráčů se stejným umístěním ve výsledkové tabulce, pak hráč, který skóre dosáhne první, dostane nejvyšší výhru."
+        "text": "● Minimální požadovaná sázka činí 0,50 €. <br/>● Aby se hráči mohli zapojit, musí hrát se skutečnými penězi a provést požadovanou sázku v jakékoliv ze zahrnutých her. <br/>● V týdenních turnajích – nejvyšší výhra za jeden spin upravená podle výše sázky.<br/>● V denních turnajích – jakýkoliv spin za skutečné peníze v zapojených hrách může vyvolat náhodnou cenu.<br/>● Hráčům nevznikají žádné další výdaje související s účastí."
       }
     ]
   },
