--- a/locales/de.json
+++ b/locales/de.json
@@ -468,7 +468,7 @@
       },
       {
         "title": "Teilnehmende Spiele",
-        "text": "Wolf Gold™, Mustang Gold™, Sweet Bonanza™, John Hunter and the Tomb of the Scarab Queen™, Great Rhino Megaways™, John Hunter and the Book of Tut™, The Dog House™, The Dog House Megaways™, Chilli Heat™, Fruit Party™, Big Bass Bonanza™, Madame Destiny Megaways™, Gems Bonanza™, Wild Wild Riches™, Wild West Gold™, Gates of Olympus™, Power of Thor Megaways™, Buffalo King Megaways™, The Hand of Midas™, Floating Dragon Hold & Spin™, The Magic Cauldron – Enchanted Brew™, Heart of Rio™, Dragon Hot Hold and Spin™, Lucky Lightning™, 5 Lions Megaways™."
+        "text": "Wolf Gold™, Mustang Gold™, Sweet Bonanza™, John Hunter and the Tomb of the Scarab Queen™, Great Rhino Megaways™, John Hunter and the Book of Tut™, The Dog House™, The Dog House Megaways™, Chilli Heat™, Fruit Party™, Big Bass Bonanza™, Madame Destiny Megaways™, Gems Bonanza™, Wild Wild Riches™, Wild West Gold™, Gates of Olympus™, Power of Thor Megaways™, Floating Dragon Hold&Spin™, The Hand of Midas™, 5 Lions Megaways™, Buffalo King Megaways™, Release the Kraken™, Empty the Bank™, Lucky Grace And Charm™, Book of Vikings™."
       },
       {
         "title": "Drops & Wins beinhaltet",
@@ -476,11 +476,7 @@
       },
       {
         "title": "Wie man gewinnt",
-        "text": "● Höchster Gewinnbetrag für eine einzelne Ausspielung, angepasst an die Höhe des Einsatzes.<br/>● Jede Echtgeld-Ausspielung kann in den teilnehmenden Spielen einen zufälligen Geldpreis hervorbringen.<br/>● Spieler müssen sich dafür entscheiden, echtes Geld in den teilnehmenden Spielen einzusetzen, OHNE dass ein Mindesteinsatz erforderlich ist. Für die Teilnahme entstehen den Spielern keine zusätzlichen Kosten."
-      },
-      {
-        "title": "Zusätzlich",
-        "text": "● Während der Multiplikatorenwochen können Gewinne in Form eines in der Wochenturniergewinnübersicht (Gewinnmultiplikatorenwochen) und der Tagesausschüttungsübersicht weiter unten (im weiteren Textverlauf die „Gewinnmultiplikatorenwochen“) ausgewiesenen Vielfachen r des Einsatzes der erfolgreichen Spielerin bzw. des erfolgreichen Spielers erzielt werden.<br/>● Wenn der Gewinn in der erfolgreichen Ausspielung zehn Euro (10 €) übersteigt, erfolgt die Auszahlung des Gewinns auf der Grundlage eines Einsatzes von 10 Euro (10 €) oder umgerechnet in die jeweils geltende Währung (s. unten) multipliziert mit dem erworbenen Multiplikator x.<br/>● Die Ermittlung der Ranglistenposition erfolgt entsprechend der Punktzahl für den höchsten Einzelgewinn in einer einzelnen Ausspielung in einem der teilnehmenden Spiele umgerechnet auf den jeweiligen Einsatz.<br/>● Sollten zwei (2) oder mehr Mitspielende ein Wochenturnier auf demselben Ranglistenplatz beenden, entfällt der höhere Gewinn auf die Spielerin bzw. den Spieler, die/der die erfolgreiche Punktzahl zuerst erreicht hat."
+        "text": "● Der Mindesteinsatz beträgt 0,50 Euro. <br/>● Zur Teilnahme muss in einem oder mehreren der teilnehmenden Spiele Echtgeld in entsprechender Höhe gesetzt werden. <br/>● In den Wöchentlichen Turnieren – Höchster Einzelausspielungsgewinn relativ zum Einsatz.<br/>● In den Täglichen Turnieren – jeder Echtgeldeinsatz kann die zufällige Ausschüttung eines Preises auslösen.<br/>● Die Teilnahme hat keine weiteren Kosten."
       }
     ]
   },
